[package]
name = "rcusage"
version = "0.1.0"
edition = "2021"
description = "Claude Code usage analyzer (Rust port of ccusage)"
license = "MIT"

[[bin]]
name = "rcusage"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
jiff = { version = "0.2", features = ["serde", "tzdb-bundle-platform"] }
ureq = { version = "2", features = ["json", "tls"] }
comfy-table = "7"
terminal_size = "0.4"
anyhow = "1"
once_cell = "1"
ratatui = "0.29"
crossterm = "0.28"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
